# trabalho

./: .gitignore  .pre-commit-config.yaml  divisible_by_five.py  double_number.py  is_number_multiple_of_ten.py  is_number_negative.py  passfail.py  program001.py  program002.py  program003.py  program004.py  program005.py  program006.py  program008.py  program010.py  program011.py  program012.py  program013.py  program014.py  program015.py  program016.py  pyproject.toml
programs/: __init__.py  program004.py  program005.py  program007.py  program008.py  program009.py  program010.py  program011.py  program012.py  program013.py  program014.py  program015.py  program016.py  program017.py  program018.py  program019.py  program020.py  program021.py  program022.py  program023.py  program024.py  program025.py  program026.py  program027.py  program028.py  program029.py  program030.py  program031.py  program032.py  program033.py  program034.py  program035.py  program036.py  program037.py  program038.py  program039.py  program040.py  program041.py  program042.py  program043.py  (+49 more)
scripts/: a.py
tests/: program001_test.py  program002_test.py  program003_test.py  program004_test.py  program005_test.py  program007_test.py  program012_test.py  program013_test.py  program016_test.py  test_program001.py  test_program003.py  test_program006.py  test_program008.py  test_program009.py  test_program010.py  test_program011.py  test_program014.py  test_program015.py  test_program017.py  test_program018.py  test_program019.py  test_program020.py  test_program021.py  test_program022.py  (+7 more)
